images and display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
     <header>
-        <H1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </H1>
+        <div id="title">
+            <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
+            <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
+        </div>
         <h2>Dra. Andrea Rocha Santos</h2>
         <div>
             <nav>
@@ -27,12 +30,31 @@
         <div></div>
         </header>
         <main>
-    <div>
-        <img src="pictures/20200817_210535-1.jpg" alt="Picture of Dra Andrea Rocha" width="700">
-    </div>
+            <section>
+                <aside>
+                    <ul>
+                        <li>Procedimentos</li>
+                        <li>Proce 1</li>
+                        <li>Proce 2</li>
+                        <li>Proce 3</li>
+                        <li>Proce 4</li>
+                        <li>Proce 5</li>
+                    </ul>
+                </aside>
+                <div class="profile">
+                    <img src="pictures/doctor_big.webp" alt="Picture of Dra Andrea Rocha" >
+                </div>
+
+            </section>
+            <div>
+                <img class="profile" src="pictures/teeth_big.webp" alt="Picture of Dra Andrea Rocha's office" loading="lazy">
+            </div>
+            <div>
+                <img class="profile" src="pictures/front_desk_big.webp" alt="Picture of Dra Andrea Rocha's equipment" loading="lazy">
+            </div>
         </main>
         <footer>
-            <p>&copy;2023 &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>
+            <p id="contact">&copy;2023 &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>
             &#9742; (41) 3335-8384</p>
         </footer>
         
