responsive and weather and date

--- a/procedimentos.html
+++ b/procedimentos.html
@@ -8,11 +8,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Kanit&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Dra. Andrea Rocha</title>
+    <title>Procedimentos</title>
 </head>
 <body>
     <header>
-        <p class="weather">Hoje <span id="today"></span> em Curitiba estamos a  <span id="today_weather">22°C </span></p>
+        <p class="weather"> <span id="today"></span> em Curitiba estamos a  <span id="today_weather"></span>°C</p>
+
         <div id="title">
             <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
             <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
@@ -32,6 +33,7 @@
         </header>
         <main>
            <div>
+            <h3>Procedimentos</h3>
             <img src="pictures/patient.webp" alt="Picture of a procedure">
            </div>
         </main>
@@ -48,7 +50,7 @@
              </div>
         </footer>
         
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     
 </body>
 </html>
