--- a/convenios.html
+++ b/convenios.html
@@ -34,7 +34,15 @@
         <main>
             <div>
                 <h3>Convenios</h3>
-                <img class="profile" src="pictures/front_desk_big.webp" alt="Picture of Dra Andrea Rocha's equipment" loading="lazy">
+                <img class="profile" id="hero" src="pictures/front_desk_big.webp" alt="Picture of Dra Andrea Rocha's equipment" loading="lazy">
+                <ul id="associates">
+                    <li>Amil</li>
+                    <li>aseguradora 1</li>
+                    <li>aseguradora 2</li>
+                    <li>aseguradora 3</li>
+                    <li>aseguradora 4</li>
+                    <li>aseguradora 5</li>
+                </ul>
             </div>
             
         </main>
