--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <h3 class="lists"><a href="convenios.html"><em>Convenios</em></h3>
                     <ul>
                         <li>Amil</li>
-                        <li>Plano 2</li>
-                        <li>Plano 3</li>
-                        <li>Plano 4</li>
-                        <li>Plano 5</a></li>
+                        <li>Uniodonto</li>
+                        <li>Interodonto (Notre Dame,Clinipan,Gndi)</li>
+                        <li>Itaipu</li>
+                        <li>Rede Unna (Bradesco,BBDental, Odontoprev)</a></li>
                     </ul>
                     <div>
                         <img src="pictures/Clear-Correct-Aligner-sydne-1-1.jpg" alt="Clear correct Banner">
@@ -70,14 +70,15 @@
             
         </main>
         <footer>
-            <p id="contact">&copy;<span id="year"></span> &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>
-            &#9742; (41) 3335-8384   example@email.com</p>
-            <div>
-                <ul id="smedia">
-                   <li><a href="https://www.instagram.com/dra.andrea.rocha/?hl=en"><img id="insta" src="pictures/instagram_icon.webp" alt="Instagram icon" ></a></li>
-                   <li><a href="https://twitter.com"><img id="twitter" src="pictures/twitter_logo.webp" alt="Twitter icon"></a></li>
-                   <li><a href="https://web.whatsapp.com/"><img id="whatsapp" src="pictures/whatsapp.webp" alt="Whatsapp icon"></a></li>
-                 </ul>
+            <p id="contact">&copy;<span id="year"></span> &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>&#9742; (41) 3335-8384   example@email.com  <br></p>
+                <div>
+                    <ul id="smedia">
+                        <li><a href="https://www.instagram.com/dra.andrea.rocha/?hl=en"><img id="insta" src="pictures/instagram_icon.webp" alt="Instagram icon" ></a></li>
+                        <li><a href="https://twitter.com"><img id="twitter" src="pictures/twitter_logo.webp" alt="Twitter icon"></a></li>
+                        <li><a href="https://wa.me/554191862054/"><img id="whatsapp" src="pictures/whatsapp.webp" alt="Whatsapp icon"></a></li>
+                        <li><iframe width="520" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=300&amp;hl=en&amp;q=Rua%20Padre%20Anchieta%201691%20Curitiba+(Dra%20Andrea%20Rocha)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href='https://maps-generator.com/'>Maps Generator</a>
+                        </li>
+                    </ul>
              
              </div>
         </footer>
