--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <p class="weather"> <span id="today"></span> em Curitiba estamos a  <span id="today_weather"></span>°C</p>
+        <p class="weather"> <span id="today"></span> |  Curitiba | <span id="today_weather"></span>°C</p>
         <div id="title">
             <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
             <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
@@ -70,7 +70,7 @@
             
         </main>
         <footer>
-            <p id="contact">&copy;<span id="year"></span> &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>&#9742; (41) 3335-8384   example@email.com  <br></p>
+            <p id="contact">&copy;<span id="year"></span> &#9877; Dra Andrea Rocha | Rua Padre Anchieta 1691, cj 509,Bigorrilho, Curitiba.<br>&#9742; (41) 3335-8384   <em>arsclinicaodontologica@gmail.com </em> <br></p>
                 <div>
                     <ul id="smedia">
                         <li><a href="https://www.instagram.com/dra.andrea.rocha/?hl=en"><img id="insta" src="pictures/instagram_icon.webp" alt="Instagram icon" ></a></li>
