--- a/convenios.html
+++ b/convenios.html
@@ -37,11 +37,11 @@
                 <h3>Convênios</h3>
                 <img class="profile" id="hero" src="pictures/front_desk_big.webp" alt="Picture of Dra Andrea Rocha's equipment" loading="lazy">
                 <ul class="associates">
-                    <li>Amil <img src="pictures/amil.png" alt="Logo Amil"></li>
-                    <li>Uniodonto <img src="pictures/uniodonto.jpg" alt="Logo Uniodonto"></li>
-                    <li>Interodonto (Notre Dame, Clinipam, Gndi)<img src="pictures/interodonto.jpg" alt="Logo Interodonto"> <img src="pictures/clinipam.png" alt="Logo Clinipam"> </li>
-                    <li>Itaipu</li>
-                    <li>Rede UNNA (Bradesco, BB Dental, Odontoprev) <img src="pictures/Logo_RedeUNNA_Transparente_Login.png" alt="Logo Rede UNNA"> <img src="pictures/bradesco-dental.jpg" alt="Logo Bradesco"> <img src="pictures/Plano-BB-Dental.png" alt=""></li>
+                    <li><a href="https://amil.osplanosdesaude.com/amil-vendas/">Amil <img src="pictures/amil.png" alt="Logo Amil"></a></li>
+                    <li><a href="http://uniodonto.coop.br"> Uniodonto <img src="pictures/uniodonto.jpg" alt="Logo Uniodonto"></a></li>
+                    <li><a href="http://gndisul.com.br"> Interodonto (Notre Dame, Clinipam, Gndi)<img src="pictures/interodonto.jpg" alt="Logo Interodonto"> <img src="pictures/clinipam.png" alt="Logo Clinipam"></a> </li>
+                    <li><a href="http://itaipu.gov.br"> Itaipu <img src="pictures/itaipu-logo.png" alt="Logo Itaipu"></a></li>
+                    <li><a href="http://redeunna.com.br/dentista"> Rede UNNA (Bradesco, BB Dental, Odontoprev) <img src="pictures/Logo_RedeUNNA_Transparente_Login.png" alt="Logo Rede UNNA"> <img src="pictures/bradesco-dental.jpg" alt="Logo Bradesco"> <img src="pictures/Plano-BB-Dental.png" alt=""></a></li>
                     
                 </ul>
             </div>
