--- a/convenios.html
+++ b/convenios.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="procedimentos.html"><li>Procedimentos</a></li>
+                    <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="form.html">Contato</a></li>
                     <li><a href="about.html">Biografia</a></li>
                 </ul>
