--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="procedimentos.html"><li>Procedimentos</a></li>
+                    <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
                     <li><a href="form.html">Contato</a></li>
                     <li><a href="about.html">Biografia</a></li>
@@ -32,36 +32,36 @@
         
         </header>
         <main>
-            <section id="top"> 
-                <aside>
-                    <h3 class="lists"><a href="procedimentos.html"><em>Procedimentos</em></h3>
+            <section id="top">
+              <aside><a href="procedimentos.html">
+                    <h3 class="lists"><em>Procedimentos</em></h3>
                     <ul>
                         <li>Canal</li>
                         <li>Alinhadores Invisíveis</li>
                         <li>Aparelhos de safira</li>
                         <li>Aparelho tradicional</li>
-                        <li>Clareamento</a></li>
+                        <li>Clareamento</li>
                     </ul>
                 </aside>
                 <div class="profile">
                     <img class="profile" src="pictures/doctor_big.webp" alt="Picture of Dra Andrea Rocha" >
                 </div>
 
-            </section>
+            </a></section>
             <section id="bottom">
                 <div class="profile">
                     <img class="profile" src="pictures/teeth_big.webp" alt="Picture of Dra Andrea Rocha's office" loading="lazy">
                    
                 </div>
                 <aside>
-                    <h3 class="lists"><a href="convenios.html"><em>Convênios</em></h3>
-                    <ul>
+                    <a href="convenios.html"><h3 class="lists"><em>Convênios</em></h3></a>
+                    <ul><a href="convenios.html">
                         <li>Amil</li>
                         <li>Uniodonto</li>
                         <li>Interodonto (Notre Dame,Clinipan,Gndi)</li>
                         <li>Itaipu</li>
-                        <li>Rede Unna (Bradesco,BBDental, Odontoprev)</a></li>
-                    </ul>
+                        <li>Rede Unna (Bradesco,BBDental, Odontoprev)</li>
+                    </a></ul>
                     <div>
                         <img src="pictures/Clear-Correct-Aligner-sydne-1-1.jpg" alt="Clear correct Banner">
                     </div>
