--- a/form.html
+++ b/form.html
@@ -25,7 +25,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="procedimentos.html"><li>Procedimentos</a></li>
+                    <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
                     <li><a href="about.html">Biografia</a></li>
                 </ul>
