--- a/procedimentos.html
+++ b/procedimentos.html
@@ -25,7 +25,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="convenios.html"><li>Convênios</a></li>
+                    <li><a href="convenios.html">Convênios</a></li>
                     <li><a href="form.html">Contato</a></li>
                     <li><a href="about.html">Biografia</a></li>
                 </ul>
