--- a/thankyou.html
+++ b/thankyou.html
@@ -23,7 +23,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html"><li>Home</a></li>
-                    <li><a href="procedimentos.html"><li>Procedimentos</a></li>
+                    <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
                     <li><a href="form.html">Contato</a></li>
                     <li><a href="about.html">Biografia</a></li>
