--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@
                         <label for="lastname">Sobrenome: </label><br><input type="text" name="lastname" id="lastname" placeholder="Sobrenome"><br>
                         <label for="email">*Email: </label><br> <input type="email" name="email" id="email" placeholder="Email" required><br>
                         <label for="phone">Fone: </label><br><input type="tel" name="phone" id="phone" placeholder="(dd)xxx-xxxx"><br>
-                        <label for="question">*Pergunta ou comentário</label><br><input type="text" id="question"><br>
+                        <label for="question">*Pergunta ou comentário</label><br><textarea id="question" name="user_message"></textarea><br>
                         <input type="submit"><input type="hidden">
                     
 
