--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <h2>Dra. Andrea Rocha Santos</h2>
         <div>
             <nav>
-                <ul>
+                <button id="hamburguerBtn"><span>&#9776;</span><span>&#9747;</span></button>
+                <ul id="primaryNav">
+                    
                     <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
                     <li><a href="form.html">Contato</a></li>
