--- a/about.html
+++ b/about.html
@@ -23,7 +23,8 @@
         <h2>Dra. Andrea Rocha Santos |  Biografia</h2>
         <div>
             <nav>
-                <ul>
+                <button id="hamburguerBtn"><span>&#9776;</span><span>&#9747;</span></button>
+                <ul id="primaryNav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="form.html">Contato</a></li>
