--- a/form.html
+++ b/form.html
@@ -23,7 +23,9 @@
         <h2>Dra. Andrea Rocha Santos |  Contato</h2>
         <div>
             <nav>
-                <ul>
+                <button id="hamburguerBtn"><span>&#9776;</span><span>&#9747;</span></button>
+                <ul id="primaryNav">
+                
                     <li><a href="index.html">Home</a></li>
                     <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
