--- a/thankyou.html
+++ b/thankyou.html
@@ -21,7 +21,8 @@
         <h2>Dra. Andrea Rocha Santos</h2>
         <div>
             <nav>
-                <ul>
+                <button id="hamburguerBtn"><span>&#9776;</span><span>&#9747;</span></button>
+                <ul id="primaryNav">
                     <li><a href="index.html"><li>Home</a></li>
                     <li><a href="procedimentos.html">Procedimentos</a></li>
                     <li><a href="convenios.html">Convênios</a></li>
