Commit mudanças observações doutora

--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
         <p class="weather"> <span id="today"></span> em Curitiba estamos a  <span id="today_weather"></span>°C</p>
 
         <div id="title">
-            <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
+            <h1>ORTODONTIA, ENDODONTIA E BOTOX </h1>
             <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
         </div>
         <h2>Dra. Andrea Rocha Santos |  Contato</h2>
