--- a/procedimentos.html
+++ b/procedimentos.html
@@ -17,7 +17,7 @@
         <p class="weather"> <span id="today"></span> em Curitiba estamos a  <span id="today_weather"></span>°C</p>
 
         <div id="title">
-            <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
+            <h1>ORTODONTIA, ENDODONTIA E BOTOX </h1>
             <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
         </div>
         <h2>Dra. Andrea Rocha Santos  | Procedimentos</h2>
@@ -39,13 +39,15 @@
 
             <aside class="left"><h3>Ortodontia</h3>
                 <h4>Clear Correct</h4>
-                <p>Clear Correct é um sistema de tratamento ortodôntico composto por alinhadores transparentes que oferecem soluções para uma ampla variedade de más oclusões</p>
+                <p>Clear Correct é um sistema de tratamento ortodôntico composto por alinhadores transparentes que oferecem soluções para uma ampla variedade de más oclusões.
+                    Uma opção de tratamento ortodôntico estética, rápida e muito confortável para o paciente.
+                </p>
                 <img src="https://placehold.jp/150x150.png" alt="Placeholder">
                 <h4>Aparelhos de safira</h4>
                 <p>O aparelho de safira é um tipo de aparelho ortodôntico fixo similar ao metálico, com a diferença de que os seus bráquetes são confeccionados em monocristais de safira. Ela é um mineral translúcido que não contrasta com os dentes</p>
                 <img src="https://placehold.jp/150x150.png" alt="Placeholder">
-                <h4>Aparelho tradicional</h4>
-                <p>O tipo de aparelho usado fabricado em metal consistente de fios, bandas e braquetes</p>
+                <h4>Aparelho fixo metálico</h4>
+                <p>Aparelho tradicional constituído de braquetes metálicos, ainda muito utilizado devido ao baixo custo e boa resistência do aparelho.</p>
                 <img src="https://placehold.jp/150x150.png" alt="Placeholder">
                 
             </aside>
@@ -58,9 +60,11 @@
 
 
             <aside class="right"><h3>Endodontia</h3>
-            <h4>Canal</h4><p>O tratamento de canal, ou simplesmente canal dentário, é um procedimento que consiste na retirada da polpa do dente, um tecido encontrado na parte interna da raiz. Geralmente, ele é indicado quando existe uma cárie em processo avançado e que já causou danos na polpa dentária.</p>
+            <h4>Canal</h4><p>
+                O tratamento de canal, ou simplesmente canal dentário, é um procedimento que consiste na retirada da polpa do dente, um tecido encontrado na parte interna da raiz. Geralmente, ele é indicado quando existe uma cárie em processo avançado e que já causou danos na polpa dentária.
+            Traumas dentários também indicam muitas vezes necessidade de tratamento de canal, além de restaurações antigas infiltradas ou mal adaptdas.</p>
             <img src="https://placehold.jp/150x150.png" alt="Placeholder">
-            <h4>Clareamento</h4>
+            <h4>Clareamento Dentário</h4>
             <p>Procedimento estético para deixar os dentes mais brancos</p>
             <img src="https://placehold.jp/150x150.png" alt="Placeholder"></aside>
            </div>
