--- a/thankyou.html
+++ b/thankyou.html
@@ -15,7 +15,7 @@
     <header>
         <p class="weather"> <span id="today"></span> |  Curitiba | <span id="today_weather"></span>  &#8451;</p>
         <div id="title">
-            <h1>ORTODONTIA, ESPECIALISTA EM ENDODONTIA E BOTÓX </h1>
+            <h1>ORTODONTIA, ENDODONTIA E BOTOX </h1>
             <img id="logo" src="pictures/logo.png" alt="big teeth, logo of Dra. Andrea Rocha">
         </div>
         <h2>Dra. Andrea Rocha Santos</h2>
