commit drAndrea's history

--- a/about.html
+++ b/about.html
@@ -37,8 +37,12 @@
         <main>
             <div id="aboutme">
                 
-                <p>Formação profissional com facultade e cursos de especialização nas principais universidades de Curitiba, com constante crecimento profissional atendendo aos congresos nacionais e internacionais na área.<br>
-                    Como especialista na área da saude colaboro com os meus colegas nas principais clinicas da cidade procurando sempre brindar um ótimo atendimento aos meu clientes.
+                <p>Sou Dentista formada pela Puc-Pr no ano de 2010. Meu primeiro curso de especialização foi a Endodontia, na Universidade Positivo,
+                     o qual concluí no ano de 2012. Me mudei para São Paulo nesse ano, onde trabalhei em clínicas grandes e de bastante movimento 
+                     na área de Endodontia (canal) e comecei a me interessar pela Ortodontia. Fiz então a minha segunda especialização, Ortodontia 
+                     na ABO (Associação Brasileira de Odontologia) de SP, concluindo no ano de 2016. Em 2016 retornei para Curitiba, onde até hoje
+                      atuo no meu consultório. Atendo nas áreas de Endodontia, Ortodontia e clínico geral. E desde 2020, atuo bastante com 
+                      toxina botulínica (botox) para fins estéticos.
 
                 </p>
                 <img class="profile" src="pictures/equipment_big.webp" alt="Picture of Dra Andrea Rocha's equipment" loading="lazy">
