commit  fix of pictures and nav bar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li>Canal</li>
                         <li>Alinhadores Invisíveis</li>
                         <li>Aparelhos de safira</li>
-                        <li>Aparelho tradicional</li>
+                        <li>Aparelho fixo metálico</li>
                         <li>Clareamento dentário</li>
                     </ul>
                 </aside>
