--- a/procedimentos.html
+++ b/procedimentos.html
@@ -42,13 +42,13 @@
                 <p>Clear Correct é um sistema de tratamento ortodôntico composto por alinhadores transparentes que oferecem soluções para uma ampla variedade de más oclusões.
                     Uma opção de tratamento ortodôntico estética, rápida e muito confortável para o paciente.
                 </p>
-                <img src="https://placehold.jp/150x150.png" alt="Placeholder">
+                <img src="./pictures/clear-correct.jpg" alt="Alinhadores Clear correct">
                 <h4>Aparelhos de safira</h4>
                 <p>O aparelho de safira é um tipo de aparelho ortodôntico fixo similar ao metálico, com a diferença de que os seus bráquetes são confeccionados em monocristais de safira. Ela é um mineral translúcido que não contrasta com os dentes</p>
-                <img src="https://placehold.jp/150x150.png" alt="Placeholder">
+                <img src="./pictures/aparelho-estetico-de-safira.jpg" alt="Aparelho de safira">
                 <h4>Aparelho fixo metálico</h4>
                 <p>Aparelho tradicional constituído de braquetes metálicos, ainda muito utilizado devido ao baixo custo e boa resistência do aparelho.</p>
-                <img src="https://placehold.jp/150x150.png" alt="Placeholder">
+                <img src="./pictures/fixo-metalico.jpg" alt="Aparelho fix metálico">
                 
             </aside>
             
@@ -56,17 +56,17 @@
                 <img src="pictures/patient.webp" alt="Picture of a procedure">
                 <h3>Botox</h3>
                 <p>O botox, nome popular da toxina botulínica, é uma substância química que atua impedindo a contração dos músculos. Muito utilizado para o tratamento de diversas doenças, tornou-se o principal recurso estético para a redução de rugas e linhas de expressão.</p>
-                <img src="https://placehold.jp/750x550.png" alt="Placeholder"></div>
+                <img src="./pictures/botox.jpg" alt="Aplicação de Botox"></div>
 
 
             <aside class="right"><h3>Endodontia</h3>
             <h4>Canal</h4><p>
                 O tratamento de canal, ou simplesmente canal dentário, é um procedimento que consiste na retirada da polpa do dente, um tecido encontrado na parte interna da raiz. Geralmente, ele é indicado quando existe uma cárie em processo avançado e que já causou danos na polpa dentária.
             Traumas dentários também indicam muitas vezes necessidade de tratamento de canal, além de restaurações antigas infiltradas ou mal adaptdas.</p>
-            <img src="https://placehold.jp/150x150.png" alt="Placeholder">
+            <img src="./pictures/cc-dental-root-canal-diagram.jpg" alt="Procedimento de canal">
             <h4>Clareamento Dentário</h4>
             <p>Procedimento estético para deixar os dentes mais brancos</p>
-            <img src="https://placehold.jp/150x150.png" alt="Placeholder"></aside>
+            <img src="./pictures/clareamento-dental-1.jpg" alt="Clareamento dental"></aside>
            </div>
         </main>
         <footer>
