Commit change of hero image botox

--- a/procedimentos.html
+++ b/procedimentos.html
@@ -56,7 +56,7 @@
                 <img src="pictures/patient.webp" alt="Picture of a procedure">
                 <h3>Botox</h3>
                 <p>O botox, nome popular da toxina botulínica, é uma substância química que atua impedindo a contração dos músculos. Muito utilizado para o tratamento de diversas doenças, tornou-se o principal recurso estético para a redução de rugas e linhas de expressão.</p>
-                <img src="./pictures/botox.jpg" alt="Aplicação de Botox"></div>
+                <img src="./pictures/botox_2.jpeg" alt="Aplicação de Botox"></div>
 
 
             <aside class="right"><h3>Endodontia</h3>
